# tino

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  biome.json  buf.gen.yaml  docker-compose.yml  env.example  package-lock.json  package.json  turbo.json
engine/: pyproject.toml
engine/scripts/: export_openapi.py
engine/src/: __init__.py  main.py
engine/src/api/: error_handler.py
engine/src/core/: audit_logger.py  backtest_runner.py  data_manager.py  database.py  engine.py  live_manager.py  session_manager.py  strategy_loader.py
engine/src/risk/: circuit_breaker.py  key_validator.py
engine/src/schemas/: __init__.py  backtest.py  events.py  live_session.py  risk.py  strategy.py
engine/tests/: conftest.py
engine/tests/integration/: test_backtest.py  test_dashboard_serving.py  test_health.py  test_live_session.py  test_multi_session.py  test_shutdown.py  test_strategies.py
engine/tests/unit/: test_circuit_breaker.py  test_conflict_detection.py  test_data_manager.py  test_key_validator.py  test_strategy_loader.py
python/: .dockerignore  Dockerfile  pyproject.toml
python/scripts/: start_daemon.py
python/tests/: conftest.py  test_backtest_db.py  test_backtest_service.py  test_binance_adapter.py  test_binance_wrangler.py  test_chart_service.py  test_config.py  test_data_service.py  test_exchange_connectors.py  test_exchange_service.py  test_extract_metrics.py  test_funding_rate_arb.py  test_hummingbot_adapter.py  test_integration.py  test_node_registry.py  test_perpetual_support.py  test_portfolio_integration.py  test_portfolio_service.py  test_server.py  test_streaming_service.py  test_streaming_subscribe.py  test_trading_service.py  test_wranglers.py
python/tino_daemon/: __init__.py  __main__.py  config.py  node_registry.py  server.py
python/tino_daemon/analytics/: __init__.py  anomaly.py  test_anomaly.py
python/tino_daemon/chart/: plotext_renderer.py
python/tino_daemon/exchanges/: __init__.py  base_connector.py  binance.py  bitget.py  bybit.py  hummingbot_adapter.py  okx.py  rate_limiter.py  test_advanced_orders.py
python/tino_daemon/nautilus/: __init__.py  binance_config.py  bybit_config.py  catalog.py  engine.py  exchange_factory.py  instrument_normalizer.py  node.py  nt_serializers.py  okx_config.py
python/tino_daemon/optimization/: __init__.py  grid_search.py  test_grid_search.py
python/tino_daemon/paper/: __init__.py  engine.py  funding.py  orderbook_sim.py  position_manager.py
python/tino_daemon/persistence/: backtest_db.py  portfolio_db.py
python/tino_daemon/proto/: __init__.py
python/tino_daemon/services/: __init__.py  analytics.py  backtest.py  chart.py  daemon.py  data.py  exchange.py  portfolio.py  streaming.py  trading.py
python/tino_daemon/strategies/: __init__.py  base.py  funding_rate_arb.py  test_base.py
python/tino_daemon/streaming/: binance_ws.py  (+5 more)
(+764 files in other folders)
