[project]
name = "tino-daemon"
version = "0.1.0"
description = "Tino quantitative trading daemon"
requires-python = ">=3.10,<3.13"
dependencies = [
    "nautilus_trader>=1.200.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "grpcio-reflection>=1.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
