[project]
name = "tino-daemon"
version = "1.0.0"
description = "Tino quantitative trading daemon - NautilusTrader gRPC wrapper"
requires-python = ">=3.10,<3.13"
dependencies = [
    "nautilus_trader>=1.200.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-health-checking>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "psutil>=5.9.0",
    "plotext>=5.2",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tino_daemon"]
omit = ["tino_daemon/proto/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
